# employee-api-on-kubernetes

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  kind-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: cd.yaml  ci.yaml  promote-prod.yaml
app/: __init__.py  app.py  config.py  errors.py  health.py  logger.py  middleware.py  routes.py
docs/: architecture.md  cicd.md  helm.md  local-setup.md  observabilty.md  security.md  troubleshooting.md
docs/diagram/: cicd.md  helm.md  observability.md
helm/employee-api/: values-dev.yaml  values-prod.yaml  values.yaml
helm/employee-api/templates/: _helpers.tpl  deployment.yaml  hpa.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy-dns.yaml  networkpolicy-ingress.yaml  networkpolicy.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  pod.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
monitoring/: install.sh  uninstall.sh  values.yaml
monitoring/alloy/: alloy_install.md  config.alloy  install.sh  values.yaml
monitoring/loki/: install.sh  uninstall.sh  values.yaml
scripts/: kind-setup.sh  smoke-test.sh
tests/: test_health.py
